Add Readme and Data

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 app.version=0.0.1
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/conference_app
+# user dont recomment null
 spring.datasource.username=conference
+# password dont recomment null
 spring.datasource.password=conference
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# this section change with none if run in docker
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
